--- a/index.html
+++ b/index.html
@@ -121,7 +121,12 @@
                 <h4 class="project-technologies">HTML/CSS/JS</h4>
               </div>
               <img src="images/guess-number.png" class="project-img" />
-              <a href="#" class="project-link" target="_blank">Go to website</a>
+              <a
+                href="https://mohsina-ahmed.github.io/Guess-a-number/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
             </div>
           </div>
           <div class="projects-wrapper">
@@ -131,7 +136,12 @@
                 <h4 class="project-technologies">HTML/CSS/JS</h4>
               </div>
               <img src="images/dice-roll-game.png" class="project-img" />
-              <a href="#" class="project-link" target="_blank">Go to website</a>
+              <a
+                href="https://mohsina-ahmed.github.io/A-dice-roller-game/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
             </div>
           </div>
           <div class="projects-wrapper">
@@ -141,7 +151,12 @@
                 <h4 class="project-technologies">HTML/CSS/JS</h4>
               </div>
               <img src="images/atm.png" class="project-img" />
-              <a href="#" class="project-link" target="_blank">Go to website</a>
+              <a
+                href="https://mohsina-ahmed.github.io/ATM-Card-Machine/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
             </div>
           </div>
           <div class="projects-wrapper">
@@ -151,9 +166,30 @@
                 <h4 class="project-technologies">Python</h4>
               </div>
               <img src="images/beautifulSoup.png" class="project-img" />
-              <a href="#" class="project-link" target="_blank">Go to code</a>
+              <a
+                href="https://github.com/Mohsina-Ahmed/Amazon-tracker.git"
+                class="project-link"
+                target="_blank"
+                >Go to code</a
+              >
             </div>
           </div>
+          <div class="projects-wrapper">
+            <div class="project">
+              <div class="project-text">
+                <h2 class="project-name">Rock-Pepper-Scissor</h2>
+                <h4 class="project-technologies">Python</h4>
+              </div>
+              <!-- <img src="images/rock-pepper-scissor.png" class="project-img" />
+              <a href="#" class="project-link" target="_blank">Go to code</a> -->
+            </div>
+          </div>
+          <iframe
+            src="https://replit.com/@MohsinaAhmed/rock-pepper-scissor?embed=true"
+            frameborder="10"
+            height="300px"
+            width="400px"
+          ></iframe>
         </div>
       </section>
       <!-- End of Section 3 -->
