--- a/index.html
+++ b/index.html
@@ -111,7 +111,12 @@
                 <h4 class="project-technologies">HTML/CSS/JS</h4>
               </div>
               <img src="images/IT-1.jpg" class="project-img" />
-              <a href="#" class="project-link" target="_blank">Go to website</a>
+              <a
+                href="https://mohsina-ahmed.github.io/IT-Services-London-Website/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
             </div>
           </div>
           <div class="projects-wrapper">
