--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- section 1 -->
       <section class="section-1 center" id="section-1">
         <h1 class="section-1-heading">Web Developer</h1>
-        <img src="images/Mohsina-Ahmed.jpg" alt="Mohsina" class="person-img" />
+        <img src="images/personal-2.jpg" alt="Mohsina" class="person-img" />
         <h3 class="person-name">Mohsina Ahmed</h3>
         <a href="#section-3" class="section-1-btn">Projects</a>
       </section>
@@ -108,64 +108,19 @@
           <div class="projects-wrapper center">
             <div class="project">
               <div class="project-text">
-                <h2 class="project-name">IT Software Website</h2>
-                <h4 class="project-technologies">HTML/CSS/JS</h4>
+                <h2 class="project-name">Python Film Flex</h2>
+                <h4 class="project-technologies">HTML/CSS/Python/Flask</h4>
               </div>
-              <img src="images/IT-1.jpg" class="project-img" />
+              <img src="images/filmflex.png" class="project-img" />
               <a
-                href="https://mohsina-ahmed.github.io/IT-Services-London-Website/"
+                href="https://python-sqlite3-project.onrender.com/welcome"
                 class="project-link"
                 target="_blank"
                 >Go to website</a
               >
             </div>
           </div>
-          <div class="projects-wrapper">
-            <div class="project">
-              <div class="project-text">
-                <h2 class="project-name">Guess A Number</h2>
-                <h4 class="project-technologies">HTML/CSS/JS</h4>
-              </div>
-              <img src="images/guess-number.png" class="project-img" />
-              <a
-                href="https://mohsina-ahmed.github.io/Guess-a-number/"
-                class="project-link"
-                target="_blank"
-                >Go to website</a
-              >
-            </div>
-          </div>
-          <div class="projects-wrapper">
-            <div class="project">
-              <div class="project-text">
-                <h2 class="project-name">A Dice Roll Game</h2>
-                <h4 class="project-technologies">HTML/CSS/JS</h4>
-              </div>
-              <img src="images/dice-roll-game.png" class="project-img" />
-              <a
-                href="https://mohsina-ahmed.github.io/A-dice-roller-game/"
-                class="project-link"
-                target="_blank"
-                >Go to website</a
-              >
-            </div>
-          </div>
-          <div class="projects-wrapper">
-            <div class="project">
-              <div class="project-text">
-                <h2 class="project-name">ATM Machine</h2>
-                <h4 class="project-technologies">HTML/CSS/JS</h4>
-              </div>
-              <img src="images/atm.png" class="project-img" />
-              <a
-                href="https://mohsina-ahmed.github.io/ATM-Card-Machine/"
-                class="project-link"
-                target="_blank"
-                >Go to website</a
-              >
-            </div>
-          </div>
-          <div class="projects-wrapper">
+          <div class="projects-wrapper center">
             <div class="project">
               <div class="project-text">
                 <h2 class="project-name">Amazon Tracker</h2>
@@ -179,7 +134,7 @@
               width="400px"
             ></iframe>
           </div>
-          <div class="projects-wrapper">
+          <div class="projects-wrapper center">
             <div class="project">
               <div class="project-text">
                 <h2 class="project-name">Rock-Pepper-Scissor</h2>
@@ -195,6 +150,67 @@
             height="300px"
             width="400px"
           ></iframe>
+
+          <div class="projects-wrapper center">
+            <div class="project">
+              <div class="project-text">
+                <h2 class="project-name">Guess A Number</h2>
+                <h4 class="project-technologies">HTML/CSS/JS</h4>
+              </div>
+              <img src="images/guess-number.png" class="project-img" />
+              <a
+                href="https://mohsina-ahmed.github.io/Guess-a-number/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
+            </div>
+          </div>
+          <div class="projects-wrapper center">
+            <div class="project">
+              <div class="project-text">
+                <h2 class="project-name">A Dice Roll Game</h2>
+                <h4 class="project-technologies">HTML/CSS/JS</h4>
+              </div>
+              <img src="images/dice-roll-game.png" class="project-img" />
+              <a
+                href="https://mohsina-ahmed.github.io/A-dice-roller-game/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
+            </div>
+          </div>
+          <div class="projects-wrapper center">
+            <div class="project">
+              <div class="project-text">
+                <h2 class="project-name">ATM Machine</h2>
+                <h4 class="project-technologies">HTML/CSS/JS</h4>
+              </div>
+              <img src="images/atm.png" class="project-img" />
+              <a
+                href="https://mohsina-ahmed.github.io/ATM-Card-Machine/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
+            </div>
+          </div>
+          <div class="projects-wrapper center">
+            <div class="project">
+              <div class="project-text">
+                <h2 class="project-name">IT Software Website</h2>
+                <h4 class="project-technologies">HTML/CSS/JS</h4>
+              </div>
+              <img src="images/IT-1.jpg" class="project-img" />
+              <a
+                href="https://mohsina-ahmed.github.io/IT-Services-London-Website/"
+                class="project-link"
+                target="_blank"
+                >Go to website</a
+              >
+            </div>
+          </div>
         </div>
       </section>
       <!-- End of Section 3 -->
@@ -216,8 +232,8 @@
           action="contact.py"
           method="POST"
         > -->
-          <input type="text" id="name" placeholder="Name" />
-          <input type="email" id="email" placeholder="Email" />
+          <input type="text" id="name" name="name" placeholder="Name" />
+          <input type="email" id="email" name="email" placeholder="Email" />
           <textarea
             name="message"
             id="message"
