--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <!-- section 1 -->
       <section class="section-1 center" id="section-1">
-        <h1 class="section-1-heading">Web Developer</h1>
+        <h1 class="section-1-heading">Software Developer</h1>
         <img src="images/personal-2.jpg" alt="Mohsina" class="person-img" />
         <h3 class="person-name">Mohsina Ahmed</h3>
         <a href="#section-3" class="section-1-btn">Projects</a>
