Adding reliability project

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
             </p>
             <div class="progress-percent"></div>
           </div>
+          <div class="progress-bar">
+            <p class="progress-text">
+              AWS (IAM/EC2/S3/CloudFront/Athena/K8s etc)
+              <span></span>%
+            </p>
+            <div class="progress-percent"></div>
+          </div>
         </div>
         <div class="services">
           <div class="service">
@@ -208,6 +215,25 @@
                 class="project-link"
                 target="_blank"
                 >Go to website</a
+              >
+            </div>
+          </div>
+          <div class="projects-wrapper center">
+            <div class="project">
+              <div class="project-text">
+                <h2 class="project-name">Cloud Reliability Project</h2>
+                <h4 class="project-technologies">
+                  AWS-EC2/S3/CloudFront...etc
+                </h4>
+              </div>
+              <video width="600" height="600" controls>
+                <source src="Makers-Demo-Day.mp4" type="video/mp4" />
+              </video>
+              <a
+                href="https://github.com/Mohsina-Ahmed/Cloud-Reliability-Project"
+                class="project-link"
+                target="_blank"
+                >Go to github</a
               >
             </div>
           </div>
